# egaku2d

./: Cargo.toml  README.md
egaku2d_core/: Cargo.toml  build.rs
egaku2d_core/src/: batch.rs  circle_program.rs  lib.rs  shader.rs  shapes.rs  sprite.rs  sprite_program.rs  textured_shape_program.rs  vbo.rs
examples/: circles.rs  demo.rs  shapes.rs  simple.rs
src/: circle_program.rs  lib.rs  shader.rs  vbo.rs
very_simple_2d_core/: Cargo.toml  build.rs
very_simple_2d_core/src/: circle_program.rs  lib.rs  shapes.rs  sprite.rs  sprite_program.rs  texture.rs  vbo.rs
