[package]
name = "very_simple_2d"
version = "0.1.2"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
repository = "https://github.com/tiby312/very_simple_2d"
readme = "README.md"
edition = "2018"
description = "Simple 2D graphics library"
license = "MIT/Apache-2.0"
keywords = ["2d-graphics", "2d","graphics","opengl"]



[workspace]
members = [ "very_simple_2d_core"]

[dependencies]
axgeom = "1.4"
very_simple_2d_core = {version="0.1.0", path="./very_simple_2d_core"}
glutin = "0.22.0-alpha5"
