[package]
name = "egaku2d"
version = "0.2.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
repository = "https://github.com/tiby312/egaku2d"
readme = "README.md"
edition = "2018"
description = "Simple 2D graphics library"
license = "MIT/Apache-2.0"
keywords = ["2d-graphics", "2d","graphics","opengl"]



[workspace]
members = [ "egaku2d_core"]

[dependencies]
axgeom = "1.5"
egaku2d_core = {version="0.2.0", path="./egaku2d_core"}
glutin = "0.22"
image = "0.22.3"

[features]
fullscreen = []



