[package]
name = "egaku2d_core"
version = "0.1.1"
authors = ["Ken <kenakioreed@gmail.com>"]
build = "build.rs"
edition = "2018"
description = "Simple 2D graphics library without context creation code"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/egaku2d"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axgeom = "1.5"


[build-dependencies]
gl_generator = "0.13.0"



